--- a/copy-and-paste/app/src/main/res/layout/activity_main.xml
+++ b/copy-and-paste/app/src/main/res/layout/activity_main.xml
@@ -11,20 +11,12 @@
         android:id="@+id/button_copy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Copy Text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Copy Text" />
 
     <Button
         android:id="@+id/button_copy_credential"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Copy Text Confidential"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Copy Text Confidential" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
